<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="bangkit.xaplose.fudery.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" >
        <action
            android:id="@+id/action_navigation_discover_to_foodDetailsFragment"
            app:destination="@id/foodDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="bangkit.xaplose.fudery.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_foodDetailsFragment"
            app:destination="@id/foodDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="bangkit.xaplose.fudery.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/foodDetailsFragment"
        android:name="bangkit.xaplose.fudery.ui.fooddetails.FoodDetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_food_details">
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="history"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
</navigation>