<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <ImageView
        android:id="@+id/img_food"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/desc_food_photo" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/desc_name"
        app:layout_constraintStart_toEndOf="@+id/img_food"
        app:layout_constraintTop_toTopOf="@+id/img_food"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <ImageView
        android:id="@+id/ic_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete_outline"
        app:layout_constraintTop_toTopOf="@id/img_food"
        app:layout_constraintBottom_toBottomOf="@id/img_food"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_delete_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>