<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.fooddetails.FoodDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_food"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/desc_food_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_food"
            app:layout_constraintTop_toTopOf="@+id/img_food"
            tools:text="Banana" />

        <TextView
            android:id="@+id/tv_wps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/img_food"
            app:layout_constraintTop_toBottomOf="@id/tv_food_name"
            tools:text="Weight per serving:\n905g" />

        <TextView
            android:id="@+id/tv_caloric_breakdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/desc_caloric_breakdown"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_food" />

        <TextView
            android:id="@+id/tv_carbs_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@id/divider1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_caloric_breakdown"
            tools:text="94.18%" />

        <View
            android:id="@+id/divider1"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#c0c0c0"
            app:layout_constraintBottom_toBottomOf="@id/tv_carbs_breakdown"
            app:layout_constraintEnd_toStartOf="@id/tv_protein_percentage"
            app:layout_constraintStart_toEndOf="@id/tv_carbs_percentage"
            app:layout_constraintTop_toTopOf="@id/tv_carbs_percentage" />

        <TextView
            android:id="@+id/tv_protein_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_caloric_breakdown"
            tools:text="3.88%" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#c0c0c0"
            app:layout_constraintBottom_toBottomOf="@id/tv_protein_breakdown"
            app:layout_constraintEnd_toStartOf="@id/tv_fat_percentage"
            app:layout_constraintStart_toEndOf="@id/tv_protein_percentage"
            app:layout_constraintTop_toTopOf="@id/tv_protein_percentage" />

        <TextView
            android:id="@+id/tv_fat_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider2"
            app:layout_constraintTop_toBottomOf="@id/tv_caloric_breakdown"
            tools:text="1.94%" />

        <TextView
            android:id="@+id/tv_carbs_breakdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_carbohydrates"
            app:layout_constraintEnd_toEndOf="@id/tv_carbs_percentage"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/tv_carbs_percentage"
            app:layout_constraintTop_toBottomOf="@id/tv_carbs_percentage" />

        <TextView
            android:id="@+id/tv_protein_breakdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_protein"
            app:layout_constraintEnd_toEndOf="@id/tv_protein_percentage"
            app:layout_constraintStart_toStartOf="@id/tv_protein_percentage"
            app:layout_constraintTop_toBottomOf="@id/tv_protein_percentage" />

        <TextView
            android:id="@+id/tv_fat_breakdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_fat"
            app:layout_constraintEnd_toEndOf="@id/tv_fat_percentage"
            app:layout_constraintStart_toStartOf="@id/tv_fat_percentage"
            app:layout_constraintTop_toBottomOf="@id/tv_fat_percentage" />

        <TextView
            android:id="@+id/tv_nutrition_facts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/desc_nutrition_facts"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_carbs_breakdown" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_nutrients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nutrition_facts"
            tools:listitem="@layout/item_row_nutrient" />

        <FrameLayout
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>